Enable format warnings
Fixes https://github.com/Jaded-Encoding-Thaumaturgy/vapoursynth-resize2/issues/12

--- a/subprojects/packagefiles/zimg/meson.build
+++ b/subprojects/packagefiles/zimg/meson.build
@@ -7,7 +7,7 @@ project('zimg', 'cpp',
 cxx = meson.get_compiler('cpp')
 
 compile_args = [
-    '-Wno-unused-parameter', '-Wno-missing-field-initializers', '-Wno-format', '-Wno-endif-labels',
+    '-Wno-unused-parameter', '-Wno-missing-field-initializers', '-Wformat=2', '-Wno-endif-labels',
     '-lstdc++', '-fvisibility=hidden', '-DGRAPHENGINE_IMPL_NAMESPACE=zimg'
 ]
 
