Remove NEON flags
zimg does not use any of these anymore in its own build system.

Fixes https://github.com/Jaded-Encoding-Thaumaturgy/vapoursynth-resize2/issues/10

--- a/subprojects/packagefiles/zimg/meson.build
+++ b/subprojects/packagefiles/zimg/meson.build
@@ -145,10 +145,7 @@ if opt_ARMSIMD
         'src/zimg/resize/arm/resize_impl_arm.h'
     ]
 
-    NEON_CFLAGS = ['-march=armv7-a', '-mfpu=neon-vfpv4']
-    if cxx.has_argument('-mfp16-format=ieee')
-        NEON_CFLAGS += ['-mfp16-format=ieee']
-    endif
+    NEON_CFLAGS = []
 
     link_libs += static_library(
         'neon',
