--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Install Nix
       uses: cachix/install-nix-action@v31.5.2
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
+        nix_path: nixpkgs=channel:nixpkgs-unstable
 
     - name: Set up Nix cache
       uses: cachix/cachix-action@v16
